Added ANTLR 4 grammar for RNA input files and the relative classes for loading the secondary structures. Added test structures and JUnit 5 tests for input files.

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/StatAlign.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.4.jar"/>
+	<classpathentry kind="lib" path="/Users/luca/Documents/Dropbox/Documenti/Codice/workspace-aspralign/ASPRAlign/lib/antlr-4.7.2-complete.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
