--- a/.settings/com.github.jknack.antlr4ide.Antlr4.prefs
+++ b/.settings/com.github.jknack.antlr4ide.Antlr4.prefs
@@ -1,5 +1,5 @@
-antlr4.antlrRegisteredTools=4.4@/var/folders/9r/g0621dhs331d2fppssz93y0h0000gn/T/antlr-4.4-complete.jar
-antlr4.antlrToolPath=/var/folders/9r/g0621dhs331d2fppssz93y0h0000gn/T/antlr-4.4-complete.jar
+antlr4.antlrRegisteredTools=4.4@/var/folders/9r/g0621dhs331d2fppssz93y0h0000gn/T/antlr-4.4-complete.jar\:4.9.3@/Users/luca/Documents/Dropbox/Documenti/Codice/workspace-aspralign/Converters/lib/antlr-4.9.3-complete.jar
+antlr4.antlrToolPath=/Users/luca/Documents/Dropbox/Documenti/Codice/workspace-aspralign/Converters/lib/antlr-4.9.3-complete.jar
 antlr4.encoding=UTF-8
 antlr4.listener=true
 antlr4.visitor=false
